Implemented Car Dealer skeleton and seedSuppliers() method